--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "gputil>=1.4.0",
     "huggingface-hub>=0.33.4",
     "isort>=6.0.1",
+    "pandas>=2.3.1",
     "psutil>=7.0.0",
     "torch>=2.7.1",
     "transformers>=4.53.2",
