--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "matplotlib>=3.10.5",
     "nltk>=3.9.1",
     "pandas>=2.3.1",
+    "peft>=0.17.0",
     "psutil>=7.0.0",
     "seaborn>=0.13.2",
     "torch>=2.7.1",
